@startuml
'https://plantuml.com/class-diagram
abstract Nut{
    int giaTri
    + {abstract} void duyet()
    + {abstract}  void themTrai(Nut n)
    + {abstract} void themPhai(Nut n)
    + {abstract} void xoaTrai()
    + {abstract} void xoaPhai()
}

class NutLa

class NutTrong

Nut <|-- NutLa
Nut <|-- NutTrong
NutTrong --> Nut: Trai
NutTrong --> Nut: Phai

@enduml